# agentic-os

./: .gitignore  AGENTIC_OS_BLUEPRINT.md  CONTRIBUTING.md  DECISIONS.md  README.md  RECOVERY.md  TROUBLESHOOTING.md  agentic-os-complete-today-build-prompt.md  agentic-os-night1-build-prompt.md  agentic-os-research-report.md  agentic-os-research-state.md  agentic-os-sources.md  agentic-os-two-week-plan.md  agentic-os-two-week-scope-prompt.md  agentic-os-v0.2-u-c1-hardening-contract.md  agentic-os-v0.2-u-c2-backup-restore-contract.md  agentic-os-v0.2-u-c3-secret-safety-contract.md  agentic-os-v0.2-u-c4-windows-export-contract.md  agentic-os-v0.2-u-e2-power-modes-contract.md  agentic-os-v0.2-u-h1-sessionend-hook-contract.md  agentic-os-v0.2-u-h2-success-proof-contract.md  agentic-os-v0.2-u-m1-migration-contract.md  agentic-os-v0.2-u-p1-packaging-contract.md  agentic-os-v0.3-u-m2-memory-claims-contract.md  agentic-os-v0.3-u-m3-memory-graph-contract.md  agentic-os-v0.3-u-m5-retrieval-evals-contract.md  agentic-os-v0.3-u-x1-protocol-spine-contract.md  agentic-os-v0.4-u-a1-agent-passports-contract.md  agentic-os-v0.4-u-a2-specialist-catalog-contract.md  agentic-os-v0.4-u-a3-routing-handoffs-contract.md  agentic-os-v0.4-u-k1-u-t1-governed-foundations-contract.md  agentic-os-v0.4-u-p2-delivery-gate-contract.md  agentic-os-v0.4-u-p2-trust-boundary-amendment.md  agentic-os-v0.4-u-w1-workspec-compiler-contract.md  agentic-os-weekend-mvp-build-prompt.md  aos.py  aos_hooks.py  pyproject.toml
agentic_os/: __init__.py  __main__.py  agent_handoffs.py  backup.py  catalog.py  cli.py  db.py  doctor.py  events.py  export.py  governance.py  hooks.py  ids.py  ingest.py  migrations.py  mirror_export.py  models.py  obsidian.py  ops.py  pack.py  passports.py  power.py  protocols.py  render.py  retrieval.py  review.py  routing.py  search.py  secretscan.py  utils.py  workspecs.py
protocols/: registry.json
retrieval_benchmarks/: core-retrieval.json  graph-expansion.json  registry.json
tests/: test_cli.py  test_complete_today.py  test_core.py  test_u_p2_required_check_probe.py  test_v02_backup.py  test_v02_hardening.py  test_v02_hooks.py  (+19 more)
(+37 files in other folders)
