[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-os"
dynamic = ["version"]
description = "Local-first system of record for coordinating AI agents."
readme = "README.md"
requires-python = ">=3.12"
# Zero runtime dependencies: the CLI runs on a stock Python standard library.
dependencies = []

[project.scripts]
# Delegates to the one canonical CLI shared by aos.py, `python -m agentic_os`,
# and aos.pyz.
aos = "agentic_os.cli:main"

[tool.setuptools]
# Explicit allowlist, not auto-discovery: tests, ledger data, backups,
# exports, caches, and repository-only files are never swept in.
packages = ["agentic_os"]

[tool.setuptools.package-data]
# The built-in specialist catalog (U-A2): the manifest and twelve checked-in
# passport artifacts under agentic_os/catalog/ only. setuptools ships no
# non-.py file by default, so without this a wheel or console-script install
# would carry the loader code but none of its data. Restricted to this one
# subtree — not a repository-wide *.json rule — so no ledger, credential,
# backup, export, or other repository JSON is ever swept in this way.
agentic_os = ["catalog/*.json"]

[tool.setuptools.dynamic]
version = { attr = "agentic_os.__version__" }
